# homework

./: .gitignore  LSTM_CSC.ipynb  LSTM_MNIST.ipynb  MLP.ipynb  README.md  ResNet.ipynb  pyproject.toml
main/: BERT_CSC.ipynb  LSTM_CSC.ipynb  LSTM_IMDB.ipynb  LSTM_MNIST.ipynb  LSTM_TM.ipynb  MLP.ipynb  ResNet.ipynb  Transformer.ipynb  Transformer_CSC.ipynb  Transformer_MNIST.ipynb  dataloder.py  mltools.py
main/mltools/: __init__.py  accumulator.py  ctools.py  draw.py  ld.py  ml.py  mltools.py  models.py  timer.py  vocab.py
mltools/: draw.py  ld.py  models.py  vocab.py
src/: BERT_CSC.ipynb  LSTM_CSC.ipynb  LSTM_MNIST.ipynb  MLP.ipynb  ResNet.ipynb  Transformer_CSC.ipynb  Transformer_MNIST.ipynb
